add search function

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <title>Photo Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/baguetteBox.css">
 </head>
 
 <body >
   <header>
     <div class="search-bar">
-      <input type="text" placeholder="Search">
+      <input type="search" name="search" id="search" placeholder="Search">
     </div>
   </header>
 
@@ -53,6 +54,9 @@
       <img src="photos/thumbnails/12.jpg" alt="Bluebells">
     </a>  
   </div>
+  <script src="js/searchFilter.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/baguetteBox.js"></script>
 </body>
 
 </html>
