--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Photo Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/baguetteBox.css">
+  <link rel="stylesheet" href="css/baguetteBox.min.css">
 </head>
 
 <body >
@@ -55,7 +55,7 @@
     </a>  
   </div>
   <script src="js/searchFilter.js"></script>
-  <script src="js/baguetteBox.js"></script>
+  <script src="js/baguetteBox.min.js"></script>
   <script src="js/app.js"></script>
 
 </body>
