--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/baguetteBox.min.css">
+  <script src="js/customFilter.js"></script>
 </head>
 
 <body >
   <header>
     <div class="search-bar">
-      <input type="search" name="search" id="search" placeholder="Search">
+      <input type="search" name="search" onkeyup="myFilter()" id="search" placeholder="Search">
     </div>
   </header>
 
-  <div class="gallery">
+  <div class="gallery" id="gallery">
     <a href="photos/01.jpg" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
         <img src="photos/thumbnails/01.jpg" alt="Hay Bales">
     </a>
@@ -54,7 +55,7 @@
       <img src="photos/thumbnails/12.jpg" alt="Bluebells">
     </a>  
   </div>
-  <script src="js/searchFilter.js"></script>
+  
   <script src="js/baguetteBox.min.js"></script>
   <script src="js/app.js"></script>
 
